--- a/work5/index.html
+++ b/work5/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
     <meta charset="utf-8">
     <title>朱慧灵的循环语句程序</title>
+</head>
     <body>
         <p>9X9的空表格</p>
         <div id='table1'></div>
