--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <a href="work4/index.html">work4 js流程控制</a><br>
     <a href="work5/index.html">work5 js循环语句程序</a><br>
     <a href="work6/indxe.html">work6 阶乘法计算圆周率</a><br>
-    <a href="work7/index.html">work7 冒泡排序和插入排序</a>
-    <a href="work7slide/index.html">work7-1 冒泡排序和插入排序动画版</a>
+    <a href="work7/index.html">work7 冒泡排序和插入排序</a><br>
+    <a href="work7slide/index.html">work7-1 冒泡排序和插入排序动画版</a><br>
+    <a href="work8/index.html">work8 简易计算器</a><br>
     持续更新中。。。。。。       
 </body>
 </html>       
