--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     <a href="work19-1/index1.html">work19-1 进度条上传</a><br>
     <a href="work20/index.html">work20 折叠菜单</a><br>
     <a href="work20-1/index1.html">work20-1 左移右移</a><br>
-    <a href="work21/index.html">work21 </a><br>
-    <a href="work21-1/index1.html">work21-1 </a><br>
+    <a href="work21/index.html">work21 无缝轮播图</a><br>
+    <a href="work21-1/index1.html">work21-1 jquery Ajax无刷新提交评论</a><br>
+    <a href="work22/index.html">work22 扫雷游戏</a><br>
+    <a href="work23/index.html">work23 2048游戏</a><br>
     持续更新中。。。。。。       
 </body>
 </html>       
