--- a/work21-1/index1.html
+++ b/work21-1/index1.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>朱慧灵的Ajax无刷新提交评论</title>
+    <title>朱慧灵的 jquery Ajax无刷新提交评论</title>
     <script src="../jquery.js"></script>
 </head>
 <body>
-    <div>朱慧灵的Ajax无刷新提交评论</div>
+    <div>朱慧灵的jquery Ajax无刷新提交评论</div>
     <form>
         学号：<input type="text" value="07190752" name="sno"><br>
         姓名：<input type="text" value="朱慧灵" name="name"><br>
-        评论：<input type="text" value="我会不写AJAX，太棒了。" name="content" size=30><br>
+        评论：<input type="text" value="我不会写jquery AJAX，太棒了。" name="content" size=30><br>
         <input type="button" value="发表评论"><br>
     </form>
     <div id="result"></div>
